Correcting horizontal form alignment

--- a/lib-core/sass/core/components/_forms.sass
+++ b/lib-core/sass/core/components/_forms.sass
@@ -22,8 +22,8 @@ label, legend
   border-radius: 3px
   max-width: 100%
 
-  label + &
-    margin-top: ($space/5)
+  // label + &
+  //   margin-top: ($space/5)
 
   &:focus
     outline: 0px
@@ -87,6 +87,7 @@ select
 
     > *
       display: inline-block
+      vertical-align: middle
       margin-right: $space/5 
 
   @content
